# ASVLite

./: .gitignore  .gitmodules  .latexmkrc  CMakeLists.txt  Doxyfile  FrequencyDomainAnalysis.tex  LICENSE  README.md  asv_swarm.pro  example_input.toml  input_file_example  input_template  main.tex  pid.m  reference.bib  waves.tex  waves_simulation.tex  waves_theory.tex
ASVLite-Rust/: Cargo.toml
ASVLite_Rust/: Cargo.toml
ASVLite_Rust/src/: constants.rs  error.rs  geometry.rs  lib.rs  regular_wave.rs  wave.rs
c_legacy/: CMakeLists.txt  Doxyfile
c_legacy/dependency/VTK-9.1.0/Examples/Emscripten/Cxx/ConeFullScreen/: CMakeLists.txt
c_legacy/dependency/VTK-9.1.0/Filters/Core/Testing/Python/: TestFlyingEdges2D.py
c_legacy/dependency/VTK-9.1.0/IO/Export/: vtkGLTFExporter.cxx
c_legacy/dependency/VTK-9.1.0/Interaction/Widgets/Testing/Python/: TestPointCloudWidget.py
c_legacy/dependency/VTK-9.1.0/Rendering/OpenGL2/Testing/Cxx/: TestPBRMapping.cxx
c_legacy/doc/html/: annotated.html  asv_8h.js  classes.html  constants_8h.js  constants_8h_source.html  errors_8h.html  errors_8h.js  functions_vars.html  geometry_8h.js  index.html  menudata.js  sea__surface_8h.html  sea__surface_8h_source.html  simulation_8h.html  struct_dimensions.html  struct_p_i_d__controller.html  struct_regular__wave.html  struct_simulation-members.html  struct_wave.html  struct_waypoints.html  union_coordinates__3_d.html  union_coordinates__3_d.js  union_rigid__body___d_o_f-members.html  union_rigid__body___d_o_f.html
c_legacy/doc/html/search/: all_b.js  all_c.js  all_d.js  all_e.js  classes_2.js  classes_5.js  defines_0.js  defines_3.js  files_0.js  files_5.js  functions_0.js  functions_3.js  functions_4.js  functions_7.js  pages_0.js  variables_0.js  variables_10.js  variables_5.js  variables_6.js  variables_8.js  variables_b.js
c_legacy/example/: CMakeLists.txt  README.md  example_1.c
c_legacy/include/: asv.h  constants.h  geometry.h  regular_wave.h  sea_surface.h
c_legacy/source/: asv.c  simulation.c
c_legacy/visualisation/: CMakeLists.txt
c_legacy/visualisation/include/: exception.h  sea_surface_actor.h
c_legacy/visualisation/sample_files/: wave_glider
c_legacy/visualisation/source/: sea_surface_actor.cpp
c_legacy/wrapper/: README.md
c_legacy/wrapper/ctypes/: CMakeLists.txt  dll.py
c_legacy/wrapper/cython/: setup.py
c_legacy/wrapper/cython/source/: asv.pxd  asv.pyx  geometry.pyx  regular_wave.pxd  regular_wave.pyx  sea_surface.pxd
c_legacy/wrapper/cython/unit_test/: main.py
controllers/: README.md  rudder_controller.py  rudder_controller_exhaustive_search.py  rudder_controller_pid.py  rudder_controller_simple.py  simulate_tracking_cyclone.py  simulation.py  storm_track.py  temp.py  tracking_cyclone.py  wave_data.py
controllers/sample_files/: asv  hs1.nc  hs2.nc  wave_glider
cpp_current/: CMakeLists.txt
cpp_current/data/: thrust_tuning_data_output.csv  tuning_data.csv
cpp_current/data/rudder_controller_tuning/: exhaustive_search.csv  gradient_descent.csv  local_search.csv  plot.py  waypoint_navigation.csv
cpp_current/data/wave_glider_thrust_tuning/: filter_wave_glider_onboard_data.py  plot_thrust_tuning_factor.py  thrust_tuning_factors.csv  wave_glider_onboard_data_filtered.csv  wave_glider_onboard_data_unfiltered.csv
cpp_current/include/ASVLite/: asv.h  asv_bullet.h  constants.h  geometry.h  regular_wave.h  rudder_controller.h  sea_surface.h
cpp_current/source/: asv.cpp  asv_bullet.cpp  geometry.cpp  main.cpp  main_rudder_controller_tuning.cpp  main_runtime_performance.cpp  main_thrust_tuning.cpp  regular_wave.cpp  rudder_controller.cpp  sea_surface.cpp  thrust_tuning_data_generation.cpp
cyclone/: CMakeLists.txt  README.md
cyclone/include/: cyclone.h
cyclone/sample_files/: dp1.nc  dp2.nc  dp3.nc  hs3.nc
cyclone/source/: cyclone.c  read_netcdf.c
doc/html/: annotated.html  annotated_dup.js  asv_8h.html  asv_8h.js  asv_8h_source.html  classes.html  constants_8h.html  constants_8h.js  constants_8h_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  (+63 more)
documentation/: .latexmkrc  Doxyfile  hydrodynamics.tex  hydrodynamics_simulation.tex  introduction.tex  main.tex  makefile  reference.bib  waves_theory.tex
include/: asv.h  asv_dynamics.h  constants.h  current.h  environment.h  errors.h  exception.h  geometry.h  input.h  io.h  pid_controller.h  quantity.h  regular_wave.h  scene.h  sea_surface.h  sea_surface_actor.h  sea_surface_dynamics.h  sea_surface_visualization.h  simulation.h  units_and_constants.h  visualization.h  wave.h  wave_spectrum.h  wind.h  world.h
reference/: hydrodynamics.tex  makefile
source/: asv.c  asv_dynamics.cpp  current.c  environment.c  errors.c  geometry.c  geometry.cpp  input.c  io.c  main.c  main.cpp  main_headless.cpp  main_pid.c  main_regular_wave.c  main_visualisation.cpp  pid_controller.c  pid_controller.cpp  regular_wave.c  regular_wave.cpp  scene.cpp  sea_surface.c  sea_surface_actor.cpp  sea_surface_dynamics.cpp  sea_surface_visualization.cpp  simulation.c  visualization.cpp  wave.c  wave_spectrum.cpp  wind.c  world.c
src/: CMakeLists.txt
src/wave_dynamics/: CMakeLists.txt  regular_wave.cpp  regular_wave.h  wave_dynamics.cpp  wave_dynamics.h
test/: asv  asv_out  c_worker  still_water.py  template.xml  validation.ipynb  validation.py  wave.py
tests/: test_regular_wave.cpp
unit_tests/: test_regular_wave.cpp  unit_test_runner.cpp
visualisation/: CMakeLists.txt  README.md
visualisation/include/: asv_actor.h  scene.h  sea_surface_actor.h
visualisation/sample_files/: asv
visualisation/source/: asv_actor.cpp  main.cpp  scene.cpp  sea_surface_actor.cpp
wrapper/: CMakeLists.txt  asv.py  constants.py  cyclone.py  dll.py  geometry.py  pid_controller.py  regular_wave.py  wave.py
wrapper/ctypes/: README.md  asv.py  geometry.py  regular_wave.py  sea_surface.py
wrapper/cython/: setup.py
wrapper/cython/source/: asv.pxd  asv.pyx  geometry.pxd  geometry.pyx  regular_wave.pxd  regular_wave.pyx  sea_surface.pxd  sea_surface.pyx
wrapper/cython/unit_test/: test_geometry.py
(+649 files in other folders)
